[package]
name = "swil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1.2.2"
xkbcommon = { version = "0.7.0", features = ["x11"] }