[package]
name = "swil"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple, cross-platform window creation library"
repository = "https://github.com/UditDey/swil/"
readme = "README.md"
keywords = ["window", "gui", "x11"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.6.0"

[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.12.0", features = ["allow-unsafe-code", "dl-libxcb", "resource_manager", "xkb"] }
xkbcommon = { version = "0.7.0", features = ["x11"] }